# rust-laravel

./: .gitignore  .graphifyignore  ARCHITECTURE_MEMORY.md  Cargo.toml  LSP_MARKDOWN_STANDARD.md  PLAN.md  README.md  example.md  project_structure.md  release.sh  skills-lock.json
.github/workflows/: release-rust-php.yml  release.yml
crates/rust-php-configs/: Cargo.toml
crates/rust-php-configs/src/: lib.rs  types.rs
crates/rust-php-configs/src/configs/: collector.rs  extractor.rs  mod.rs
crates/rust-php-controllers/: Cargo.toml
crates/rust-php-controllers/src/: controllers_impl.rs  lib.rs  types.rs
crates/rust-php-debug/: Cargo.toml
crates/rust-php-debug/src/: analyzers.rs  browser.rs  command.rs  lib.rs  mod.rs  reports.rs  vendor.rs  web.rs
crates/rust-php-editor/: Cargo.toml
crates/rust-php-editor/src/: analyzers.rs  context.rs  index.rs  lib.rs  query.rs  types.rs
crates/rust-php-foundation/: Cargo.toml
crates/rust-php-foundation/src/: lib.rs  overrides.rs  project.rs  types.rs  vendor.rs
crates/rust-php-foundation/src/discovery/: providers.rs
crates/rust-php-foundation/src/php/: mod.rs  walk.rs
crates/rust-php-lsp/: Cargo.toml
crates/rust-php-lsp/src/: context.rs  index.rs  lib.rs  query.rs  server.rs  types.rs
crates/rust-php-markdown/: Cargo.toml
crates/rust-php-markdown/src/: asset.rs  blade.rs  bundle.rs  config.rs  controller.rs  doc.rs  env.rs  lib.rs  relation.rs  route.rs  view.rs
crates/rust-php-middleware/: Cargo.toml
crates/rust-php-middleware/src/: lib.rs  types.rs
crates/rust-php-migrations/: Cargo.toml
crates/rust-php-migrations/src/: lib.rs  types.rs
crates/rust-php-models/: Cargo.toml
crates/rust-php-models/src/: lib.rs  types.rs
crates/rust-php-output/: Cargo.toml
crates/rust-php-output/src/: json.rs  lib.rs  types.rs
crates/rust-php-output/src/text/: configs.rs  controllers.rs  middleware.rs  mod.rs  models.rs  providers.rs  public_assets.rs  views.rs
crates/rust-php-public/: Cargo.toml
crates/rust-php-public/src/: lib.rs  types.rs
crates/rust-php-routes/: Cargo.toml
crates/rust-php-routes/src/: lib.rs  types.rs
crates/rust-php-routes/src/routes/: chain.rs  collector.rs  context.rs  mod.rs  parser.rs
crates/rust-php-views/: Cargo.toml
crates/rust-php-views/src/: lib.rs  types.rs
docs/: architecture.md  lsp-config-routes.md  lsp-overview.md  zed-extension.md
docs/adr/: 001-analyzer-trait.md  002-php-parsing-strategy.md  003-php-shared-module.md  004-output-structure.md
laravel-example/: .env  README.md
laravel-example/config/: cache.php  filesystems.php  mail.php  media-library.php  queue.php
laravel-example/routes/: fail.php  fail_missing_brace.php  web.php
laravel-example/sandbox-app/: .env.example  README.md  composer.json
laravel-example/sandbox-app/app/Models/: ActivityLog.php  Invoice.php  Role.php  Subscription.php  User.php
laravel-example/sandbox-app/app/Providers/: AppServiceProvider.php  HttpDebugServiceProvider.php  RouteDebugServiceProvider.php
laravel-example/sandbox-app/bootstrap/: providers.php
laravel-example/sandbox-app/config/: app.php  debug.php
laravel-example/sandbox-app/routes/: provider.php  starter.php  web.php
routes/: fail_tokens.php  web.php
src/: benchmark.rs  cli.rs  debug.rs  debug_classmap.rs  debug_web.rs  export.rs  lib.rs  main.rs  output.rs  project.rs  types.rs
src/analyzers/: configs.rs  controllers.rs  middleware.rs  migrations.rs  mod.rs  models.rs  providers.rs  public_assets.rs  routes.rs  views.rs
src/analyzers/configs/: collector.rs  extractor.rs  mod.rs
src/analyzers/routes/: chain.rs  collector.rs  context.rs  mod.rs  parser.rs
src/core/: analysis.rs  mod.rs  overrides.rs
src/debug/: command.rs  mod.rs  reports.rs  web.rs
src/lsp/: context.rs  index.rs  mod.rs  overrides.rs  query.rs  server.rs
src/output/: json.rs  mod.rs
src/output/text/: configs.rs  middleware.rs  mod.rs  models.rs  providers.rs  routes.rs  views.rs
src/php/: ast.rs  env.rs  psr4.rs  walk.rs
tests/: controller_feature.rs  view_feature.rs
web/: components.json  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/app/: cell.tsx  data-section.tsx  debug-bar.tsx
web/components/app/views/: class-props-view.tsx  views-view.tsx  (+11 more)
web/components/ui/: select.tsx  sheet.tsx  sidebar.tsx
web/lib/: types.ts
web/src/: App.tsx  index.css
zed-extension/: Cargo.toml  README.md  extension.toml  test-blade.blade.php
zed-extension/languages/: blade.json
zed-extension/snippets/: blade.json  php.json
zed-extension/src/: lib.rs
(+34 files in other folders)
