[package]
name = "rust-php"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
comfy-table = "7.2.1"
crossterm = "0.29.0"
libc = "0.2"
php-parser = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zed_extension_api = "0.4.0"


[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
