[workspace]
members = [".", "crates/rust-php-configs", "crates/rust-php-controllers", "crates/rust-php-debug", "crates/rust-php-editor", "crates/rust-php-foundation", "crates/rust-php-lsp", "crates/rust-php-markdown", "crates/rust-php-middleware", "crates/rust-php-migrations", "crates/rust-php-models", "crates/rust-php-output", "crates/rust-php-public", "crates/rust-php-routes", "crates/rust-php-views", "zed-extension"]
resolver = "2"

[package]
name = "rust-php"
version = "0.1.1"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
comfy-table = "7.2.1"
crossterm = "0.29.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
libc = "0.2"
php-parser = "0.1.3"
rayon = "1.11.0"
rust-php-configs = { path = "crates/rust-php-configs" }
rust-php-controllers = { path = "crates/rust-php-controllers" }
rust-php-debug = { path = "crates/rust-php-debug" }
rust-php-foundation = { path = "crates/rust-php-foundation" }
rust-php-lsp = { path = "crates/rust-php-lsp" }
rust-php-markdown = { path = "crates/rust-php-markdown" }
rust-php-middleware = { path = "crates/rust-php-middleware" }
rust-php-migrations = { path = "crates/rust-php-migrations" }
rust-php-models = { path = "crates/rust-php-models" }
rust-php-output = { path = "crates/rust-php-output" }
rust-php-public = { path = "crates/rust-php-public" }
rust-php-routes = { path = "crates/rust-php-routes" }
rust-php-views = { path = "crates/rust-php-views" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
zed_extension_api = "0.4.0"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
