[package]
name = "rust-php-debug"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rust-php-configs = { path = "../rust-php-configs" }
rust-php-controllers = { path = "../rust-php-controllers" }
rust-php-foundation = { path = "../rust-php-foundation" }
rust-php-middleware = { path = "../rust-php-middleware" }
rust-php-migrations = { path = "../rust-php-migrations" }
rust-php-models = { path = "../rust-php-models" }
rust-php-output = { path = "../rust-php-output" }
rust-php-routes = { path = "../rust-php-routes" }
rust-php-views = { path = "../rust-php-views" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
