[package]
name = "rust-php-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
php-parser = "0.1.3"
rust-php-configs = { path = "../rust-php-configs" }
rust-php-controllers = { path = "../rust-php-controllers" }
rust-php-foundation = { path = "../rust-php-foundation" }
rust-php-middleware = { path = "../rust-php-middleware" }
rust-php-routes = { path = "../rust-php-routes" }
rust-php-views = { path = "../rust-php-views" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
