[package]
name = "rust-php-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
php-parser = "0.1.3"
rust-php-editor = { path = "../rust-php-editor" }
rust-php-configs = { path = "../rust-php-configs" }
rust-php-controllers = { path = "../rust-php-controllers" }
rust-php-foundation = { path = "../rust-php-foundation" }
rust-php-markdown = { path = "../rust-php-markdown" }
rust-php-middleware = { path = "../rust-php-middleware" }
rust-php-public = { path = "../rust-php-public" }
rust-php-routes = { path = "../rust-php-routes" }
rust-php-views = { path = "../rust-php-views" }
serde_json = "1.0"
